# src/main/java/com/proyecto/domain/model/UserGame.java
@@ -9,11 +9,13 @@ import java.time.LocalDateTime;
  * @param gameId    El ID del juego (IGDB).
  * @param status    El estado del juego (ej. JUGANDO, COMPLETADO).
  * @param addedAt   Fecha y hora en que se añadió a la biblioteca.
+ * @param isFavorite Si el juego está marcado como favorito.
  */
 public record UserGame(
         String userId,
         Long gameId,
         GameStatus status,
-        LocalDateTime addedAt
+        LocalDateTime addedAt,
+        Boolean isFavorite
 ) {
 }
